@@ -830,6 +830,8 @@ class BaseRegistry(metaclass=RegistryMeta):
             return 1
 
         dim1, dim2 = (self.get_dimensionality(unit) for unit in (unit1, unit2))
+        if dim1 == dim2:
+            return 1
         if not dim1 or not dim2 or dim1.keys() != dim2.keys():  # not comparable
             return None
 
